tests/snapshots/licenses__detects_unlicensed.snap
---
source: tests/licenses.rs
expression: diags
---
[
  {
    "fields": {
      "code": "empty-license-field",
      "graphs": [
        {
          "Krate": {
            "name": "features-galore",
            "version": "0.1.0"
          }
        }
      ],
      "labels": [
        {
          "column": 12,
          "line": 5,
          "message": "empty field",
          "span": ""
        }
      ],
      "message": "license field was present but empty",
      "severity": "warning"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "unlicensed",
      "graphs": [
        {
          "Krate": {
            "name": "features-galore",
            "version": "0.1.0"
          }
        }
      ],
      "labels": [
        {
          "column": 9,
          "line": 2,
          "message": "",
          "span": "features-galore"
        }
      ],
      "message": "a valid license expression could not be retrieved for the crate",
      "severity": "warning"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "unlicensed",
      "graphs": [
        {
          "Krate": {
            "name": "features-galore",
            "version": "0.1.0"
          }
        }
      ],
      "message": "features-galore = 0.1.0 is unlicensed",
      "severity": "error"
    },
    "type": "diagnostic"
  }
]
