tests/snapshots/licenses__flags_unencountered_exceptions.snap
---
source: tests/licenses.rs
expression: diags
---
[
  {
    "fields": {
      "code": "license-exception-not-encountered",
      "graphs": [],
      "labels": [
        {
          "column": 25,
          "line": 3,
          "message": "unmatched license exception",
          "span": "'bippity-boppity-boop'"
        }
      ],
      "message": "license exception was not encountered",
      "severity": "error"
    },
    "type": "diagnostic"
  }
]
