tests/snapshots/licenses__flags_unencountered_licenses.snap
---
source: tests/licenses.rs
expression: diags
---
[
  {
    "fields": {
      "code": "license-not-encountered",
      "graphs": [],
      "labels": [
        {
          "column": 11,
          "line": 1,
          "message": "unmatched license allowance",
          "span": "Aladdin"
        }
      ],
      "message": "license was not encountered",
      "severity": "error"
    },
    "type": "diagnostic"
  }
]
