tests/snapshots/licenses__handles_dev_dependencies.snap
---
source: tests/licenses.rs
expression: diags
---
[
  {
    "fields": {
      "code": "rejected",
      "graphs": [
        {
          "Krate": {
            "name": "dynamic",
            "version": "0.2.1"
          },
          "parents": [
            {
              "Krate": {
                "name": "simple_ecs",
                "version": "0.3.2"
              },
              "parents": [
                {
                  "Krate": {
                    "kind": "dev",
                    "name": "features-galore",
                    "version": "0.1.0"
                  }
                }
              ]
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 12,
          "line": 9,
          "message": "",
          "span": "MIT"
        },
        {
          "column": 12,
          "line": 9,
          "message": "rejected: license is not explicitly allowed",
          "span": "MIT"
        }
      ],
      "message": "failed to satisfy license requirements",
      "notes": [
        "MIT - MIT License:",
        "  - OSI approved",
        "  - FSF Free/Libre"
      ],
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "parse-error",
      "graphs": [
        {
          "Krate": {
            "name": "simple_ecs",
            "version": "0.3.2"
          },
          "parents": [
            {
              "Krate": {
                "kind": "dev",
                "name": "features-galore",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 12,
          "line": 6,
          "message": "a deprecated license identifier was used",
          "span": "GPL-3.0"
        }
      ],
      "message": "error parsing SPDX license expression",
      "severity": "warning"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "rejected",
      "graphs": [
        {
          "Krate": {
            "name": "simple_ecs",
            "version": "0.3.2"
          },
          "parents": [
            {
              "Krate": {
                "kind": "dev",
                "name": "features-galore",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 12,
          "line": 6,
          "message": "",
          "span": "GPL-3.0"
        },
        {
          "column": 12,
          "line": 6,
          "message": "rejected: license is not explicitly allowed",
          "span": "GPL-3.0"
        }
      ],
      "message": "failed to satisfy license requirements",
      "notes": [
        "GPL-3.0 - GNU General Public License v3.0 only:",
        "  - **DEPRECATED**",
        "  - OSI approved",
        "  - FSF Free/Libre",
        "  - Copyleft"
      ],
      "severity": "error"
    },
    "type": "diagnostic"
  }
]
