tests/snapshots/licenses__lax_fallback.snap
---
source: tests/licenses.rs
expression: diags
---
[
  {
    "fields": {
      "code": "accepted",
      "graphs": [
        {
          "Krate": {
            "name": "gnu-licenses",
            "version": "0.1.0"
          }
        }
      ],
      "labels": [
        {
          "column": 33,
          "line": 4,
          "message": "a GNU license was followed by a `+`",
          "span": "+"
        },
        {
          "column": 12,
          "line": 4,
          "message": "license expression retrieved via Cargo.toml `license`",
          "span": "Apache-2.0 OR GPL-2.0+ AND LGPL-3.0-only"
        },
        {
          "column": 12,
          "line": 4,
          "message": "rejected: not explicitly allowed",
          "span": "Apache-2.0"
        },
        {
          "column": 26,
          "line": 4,
          "message": "accepted: license is explicitly allowed",
          "span": "GPL-2.0"
        },
        {
          "column": 39,
          "line": 4,
          "message": "accepted: license is explicitly allowed",
          "span": "LGPL-3.0-only"
        }
      ],
      "message": "license requirements satisfied",
      "severity": "help"
    },
    "type": "diagnostic"
  }
]
