tests/snapshots/licenses__licenses::lists_licenses-human-license.snap
---
source: tests/licenses.rs
expression: "String::from_utf8(std::mem::take(&mut out)).expect(\"utf-8\")"
---
Apache-2.0 (36): bitflags@1.3.2, cc@1.0.73, cfg-if@1.0.0, form_urlencoded@1.1.0, git2@0.14.4, idna@0.3.0, jobserver@0.1.25, libc@0.2.134, libgit2-sys@0.13.4+1.4.2, libz-sys@1.1.8, log@0.4.17, parking_lot_core@0.9.3, percent-encoding@2.2.0, pkg-config@0.3.25, smallvec@1.9.0, tinyvec@1.6.0, tinyvec_macros@0.1.0, traitobject@0.1.0, unicode-bidi@0.3.8, unicode-normalization@0.1.22, url@2.3.1, vcpkg@0.2.15, windows-sys@0.36.1, windows-sys@0.42.0, windows_aarch64_gnullvm@0.42.0, windows_aarch64_msvc@0.36.1, windows_aarch64_msvc@0.42.0, windows_i686_gnu@0.36.1, windows_i686_gnu@0.42.0, windows_i686_msvc@0.36.1, windows_i686_msvc@0.42.0, windows_x86_64_gnu@0.36.1, windows_x86_64_gnu@0.42.0, windows_x86_64_gnullvm@0.42.0, windows_x86_64_msvc@0.36.1, windows_x86_64_msvc@0.42.0
GPL-3.0 (1): simple_ecs@0.3.2
MIT (39): bitflags@1.3.2, cc@1.0.73, cfg-if@1.0.0, dynamic@0.2.1, form_urlencoded@1.1.0, git2@0.14.4, idna@0.3.0, jobserver@0.1.25, libc@0.2.134, libgit2-sys@0.13.4+1.4.2, libz-sys@1.1.8, log@0.4.17, parking_lot_core@0.9.3, percent-encoding@2.2.0, pkg-config@0.3.25, redox_syscall@0.2.16, smallvec@1.9.0, tinyvec@1.6.0, tinyvec_macros@0.1.0, traitobject@0.1.0, unicode-bidi@0.3.8, unicode-normalization@0.1.22, unsafe-any@0.4.2, url@2.3.1, vcpkg@0.2.15, windows-sys@0.36.1, windows-sys@0.42.0, windows_aarch64_gnullvm@0.42.0, windows_aarch64_msvc@0.36.1, windows_aarch64_msvc@0.42.0, windows_i686_gnu@0.36.1, windows_i686_gnu@0.42.0, windows_i686_msvc@0.36.1, windows_i686_msvc@0.42.0, windows_x86_64_gnu@0.36.1, windows_x86_64_gnu@0.42.0, windows_x86_64_gnullvm@0.42.0, windows_x86_64_msvc@0.36.1, windows_x86_64_msvc@0.42.0
Zlib (2): tinyvec@1.6.0, tinyvec_macros@0.1.0
Unlicensed (1): features-galore@0.1.0
