tests/snapshots/licenses__licenses::lists_licenses-tsv-crate.snap
---
source: tests/licenses.rs
expression: "String::from_utf8(std::mem::take(&mut out)).expect(\"utf-8\")"
---
crate	Apache-2.0	GPL-3.0	MIT	Zlib	Unlicensed
bitflags@1.3.2	X		X	
cc@1.0.73	X		X	
cfg-if@1.0.0	X		X	
dynamic@0.2.1			X	
features-galore@0.1.0					X
form_urlencoded@1.1.0	X		X	
git2@0.14.4	X		X	
idna@0.3.0	X		X	
jobserver@0.1.25	X		X	
libc@0.2.134	X		X	
libgit2-sys@0.13.4+1.4.2	X		X	
libz-sys@1.1.8	X		X	
log@0.4.17	X		X	
parking_lot_core@0.9.3	X		X	
percent-encoding@2.2.0	X		X	
pkg-config@0.3.25	X		X	
redox_syscall@0.2.16			X	
simple_ecs@0.3.2		X		
smallvec@1.9.0	X		X	
tinyvec@1.6.0	X		X	X
tinyvec_macros@0.1.0	X		X	X
traitobject@0.1.0	X		X	
unicode-bidi@0.3.8	X		X	
unicode-normalization@0.1.22	X		X	
unsafe-any@0.4.2			X	
url@2.3.1	X		X	
vcpkg@0.2.15	X		X	
windows-sys@0.36.1	X		X	
windows-sys@0.42.0	X		X	
windows_aarch64_gnullvm@0.42.0	X		X	
windows_aarch64_msvc@0.36.1	X		X	
windows_aarch64_msvc@0.42.0	X		X	
windows_i686_gnu@0.36.1	X		X	
windows_i686_gnu@0.42.0	X		X	
windows_i686_msvc@0.36.1	X		X	
windows_i686_msvc@0.42.0	X		X	
windows_x86_64_gnu@0.36.1	X		X	
windows_x86_64_gnu@0.42.0	X		X	
windows_x86_64_gnullvm@0.42.0	X		X	
windows_x86_64_msvc@0.36.1	X		X	
windows_x86_64_msvc@0.42.0	X		X
