tests/snapshots/licenses__licenses_lists_licenses-human-crate.snap
---
source: tests/licenses.rs
expression: "String::from_utf8(std::mem::take(&mut out)).expect(\"utf-8\")"
---
bitflags@1.3.2 (2): MIT, Apache-2.0
cc@1.0.73 (2): MIT, Apache-2.0
cfg-if@1.0.0 (2): MIT, Apache-2.0
dynamic@0.2.1 (1): MIT
features-galore@0.1.0 (0): 
form_urlencoded@1.1.0 (2): MIT, Apache-2.0
git2@0.14.4 (2): MIT, Apache-2.0
idna@0.3.0 (2): MIT, Apache-2.0
jobserver@0.1.25 (2): MIT, Apache-2.0
libc@0.2.134 (2): MIT, Apache-2.0
libgit2-sys@0.13.4+1.4.2 (2): MIT, Apache-2.0
libz-sys@1.1.8 (2): MIT, Apache-2.0
log@0.4.17 (2): MIT, Apache-2.0
parking_lot_core@0.9.3 (2): MIT, Apache-2.0
percent-encoding@2.2.0 (2): MIT, Apache-2.0
pkg-config@0.3.25 (2): MIT, Apache-2.0
redox_syscall@0.2.16 (1): MIT
simple_ecs@0.3.2 (1): GPL-3.0
smallvec@1.9.0 (2): MIT, Apache-2.0
tinyvec@1.6.0 (3): Zlib, Apache-2.0, MIT
tinyvec_macros@0.1.0 (3): MIT, Apache-2.0, Zlib
traitobject@0.1.0 (2): MIT, Apache-2.0
unicode-bidi@0.3.8 (2): MIT, Apache-2.0
unicode-normalization@0.1.22 (2): MIT, Apache-2.0
unsafe-any@0.4.2 (1): MIT
url@2.3.1 (2): MIT, Apache-2.0
vcpkg@0.2.15 (2): MIT, Apache-2.0
windows-sys@0.36.1 (2): MIT, Apache-2.0
windows-sys@0.42.0 (2): MIT, Apache-2.0
windows_aarch64_gnullvm@0.42.0 (2): MIT, Apache-2.0
windows_aarch64_msvc@0.36.1 (2): MIT, Apache-2.0
windows_aarch64_msvc@0.42.0 (2): MIT, Apache-2.0
windows_i686_gnu@0.36.1 (2): MIT, Apache-2.0
windows_i686_gnu@0.42.0 (2): MIT, Apache-2.0
windows_i686_msvc@0.36.1 (2): MIT, Apache-2.0
windows_i686_msvc@0.42.0 (2): MIT, Apache-2.0
windows_x86_64_gnu@0.36.1 (2): MIT, Apache-2.0
windows_x86_64_gnu@0.42.0 (2): MIT, Apache-2.0
windows_x86_64_gnullvm@0.42.0 (2): MIT, Apache-2.0
windows_x86_64_msvc@0.36.1 (2): MIT, Apache-2.0
windows_x86_64_msvc@0.42.0 (2): MIT, Apache-2.0
